links and stuff

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
     <h2 class="numbere d-heading overline">What's Next?</h2>
     <h2 class="title">Get In Touch</h2>
     <p>
-      epic gamer what can i say !
+      I'm currently looking for end of studies internship
     </p>
     <a class="email-link" href="mailto:adam.rafraf@esprit.tn" rel="noopener noreferrer" target="_blank">Say Hello</a>
   </section>
