--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,7 @@
   <h1 class="name">Adam Rafraf.</h1>
   <h2 class="tagline">Final-Year Computer Engineering Student.</h2>
   <p class="description">
-    I'm a passionate software engineer and game developer specializing in creating innovative and user-centric digital solutions. 
-    My expertise spans game development, full-stack web applications, and CI/CD pipelines. Currently, I'm focused on delivering impactful projects and refining my technical skills at 
+    I specialize in creating engaging digital experiences, from immersive games to robust web solutions and streamlined CI/CD pipelines. Currently, I’m honing my skills and delivering impactful projects in the tech and gaming spaces.
     <a href="https://esprit.tn" target="_blank" rel="noopener noreferrer">ESPRIT</a>.
   </p>
   <a href="#work" class="cta-button">Explore My Projects</a>
