--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -47,7 +47,7 @@
       </div>
       <div class="project-image">
         <a [href]="project.links.external" target="_blank" rel="noopener noreferrer">
-          <img [src]="project.image" [alt]="project.title" />
+          <img [src]="project.image" [alt]="project.title" width="500" height="300" />
         </a>
       </div>
     </li>
