--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,10 @@ a {
   color: var(--green);
   text-decoration: none;
 }
+b {
+  color: var(--green);
+  text-decoration: none;
+}
 
 a:hover {
   text-decoration: underline;
