--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
         technologies, and automation.
       <p>
         My journey includes developing interactive games, mobile apps, and efficient deployment systems, always
-        prioritizing intuitive design and cutting-edge tools like Unity, Unreal Engine, Angular, and Jenkins.
+        prioritizing intuitive design and cutting-edge tools like <b>Unity</b>, <b>Unreal Engine</b>, <b>Angular</b>, and <b>Jenkins</b>.
       </p>
       <p>
         Here are a few technologies I've been working with recently:
