final touches fr

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="project-image">
-        <a [href]="project.links.external" target="_blank" rel="noopener noreferrer">
+        <a [href]="project.links.github" target="_blank" rel="noopener noreferrer">
           <img [src]="project.image" [alt]="project.title" width="500" height="300" />
         </a>
       </div>
